Remove unnecessary component, fix line spacing

--- a/src/styles/v1/main.scss
+++ b/src/styles/v1/main.scss
@@ -157,8 +157,8 @@
 }
 
 .subscription-details-block > p {
-  line-height: 1.0em;
-  margin-bottom: 5px;
+  line-height: 1em;
+  margin: 0;
   &.editable {
     display: flex;
   }
